panel/src/variables.css
:root {
  /** Framework **/
  --color-backdrop: rgba(0, 0, 0, 0.6);
  --color-black: #000;
  --color-light: var(--color-gray-200);
  --color-white: #fff;

  --color-gray-100: #f7f7f7;
  --color-gray-200: #efefef;
  --color-gray-300: #ddd;
  --color-gray-400: #ccc;
  --color-gray-500: #999;
  --color-gray-600: #777;
  --color-gray-700: #555;
  --color-gray-800: #333;
  --color-gray-900: #111;
  --color-gray: var(--color-gray-600);

  --color-red-200: #edc1c1;
  --color-red-300: #e3a0a0;
  --color-red-400: #d16464;
  --color-red-600: #c82829;
  --color-red: var(--color-red-600);

  --color-orange-200: #f2d4bf;
  --color-orange-300: #ebbe9e;
  --color-orange-400: #de935f;
  --color-orange-600: #f4861f;
  --color-orange: var(--color-orange-600);

  --color-yellow-200: #f9e8c7;
  --color-yellow-300: #f7e2b8;
  --color-yellow-400: #f0c674;
  --color-yellow-600: #cca000;
  --color-yellow: var(--color-yellow-600);

  --color-green-200: #dce5c2;
  --color-green-300: #c6d49d;
  --color-green-400: #a7bd68;
  --color-green-600: #5d800d;
  --color-green: var(--color-green-600);

  --color-aqua-200: #d0e5e2;
  --color-aqua-300: #bbd9d5;
  --color-aqua-400: #8abeb7;
  --color-aqua-600: #398e93;
  --color-aqua: var(--color-aqua-600);

  --color-blue-200: #cbd7e5;
  --color-blue-300: #b1c2d8;
  --color-blue-400: #7e9abf;
  --color-blue-600: #4271ae;
  --color-blue: var(--color-blue-600);

  --color-purple-200: #e0d4e4;
  --color-purple-300: #d4c3d9;
  --color-purple-400: #b294bb;
  --color-purple-600: #9c48b9;
  --color-purple: var(--color-purple-600);

  --container: 80rem;

  --font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  --font-mono: "SFMono-Regular", Consolas, Liberation Mono, Menlo, Courier,
    monospace;

  --font-normal: 400;
  --font-bold: 600;

  --leading-none: 1;
  --leading-tight: 1.25;
  --leading-snug: 1.375;
  --leading-normal: 1.5;
  --leading-relaxed: 1.625;
  --leading-loose: 2;

  --rounded-xs: 1px;
  --rounded-sm: 0.125rem;
  --rounded: 0.25rem;

  --shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
    0 2px 4px -1px rgba(0, 0, 0, 0.06);
  --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
    0 4px 6px -2px rgba(0, 0, 0, 0.05);
  --shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
    0 10px 10px -5px rgba(0, 0, 0, 0.04);
  --shadow-outline: currentColor 0 0 0 2px;
  --shadow-inset: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);

  --spacing-0: 0;
  --spacing-px: 1px;
  --spacing-2px: 2px;
  --spacing-1: 0.25rem;
  --spacing-2: 0.5rem;
  --spacing-3: 0.75rem;
  --spacing-4: 1rem;
  --spacing-5: 1.25rem;
  --spacing-6: 1.5rem;
  --spacing-8: 2rem;
  --spacing-10: 2.5rem;
  --spacing-12: 3rem;
  --spacing-16: 4rem;
  --spacing-20: 5rem;
  --spacing-24: 6rem;
  --spacing-36: 9rem;

  --text-xs: 0.75rem;
  --text-sm: 0.875rem;
  --text-base: 1rem;
  --text-lg: 1.125rem;
  --text-xl: 1.25rem;
  --text-2xl: 1.5rem;
  --text-3xl: 1.75rem;
  --text-4xl: 2.5rem;
  --text-5xl: 3rem;
  --text-6xl: 4rem;

  /** Custom Panel **/
  --color-background: var(--color-light);
  --color-border: var(--color-gray-400);
  --color-focus: var(--color-blue-600);
  --color-focus-light: var(--color-blue-400);
  --color-focus-outline: rgba(113, 143, 183, .25);
  --color-negative: var(--color-red-600);
  --color-negative-light: var(--color-red-400);
  --color-negative-outline: rgba(212, 110, 110, .25);
  --color-notice: var(--color-orange-600);
  --color-notice-light: var(--color-orange-400);
  --color-positive: var(--color-green-600);
  --color-positive-light: var(--color-green-400);
  --color-positive-outline: rgba(128, 149, 65, .25);
  --color-text: var(--color-gray-900);
  --color-text-light: var(--color-gray-600);

  --z-loader: 1000;
  --z-notification: 900;
  --z-dialog: 800;
  --z-dropdown: 700;
  --z-drawer: 600;
  --z-dropzone: 500;
  --z-toolbar: 400;
  --z-navigation: 300;
  --z-content: 200;
  --z-background: 100;

  --bg-pattern: repeating-conic-gradient(rgba(0,0,0, 0) 0% 25%, rgba(0,0,0, .2) 0% 50%) 50% / 20px 20px;

  --shadow-sticky: rgba(0, 0, 0, .05) 0 2px 5px;
  --shadow-dropdown: var(--shadow-lg);
  --shadow-item: var(--shadow);

  --field-input-padding: .5rem;
  --field-input-height: 2.25rem;
  --field-input-line-height: 1.25rem;
  --field-input-font-size: var(--text-base);
  --field-input-color-before: var(--color-gray-700);
  --field-input-color-after: var(--color-gray-700);
  --field-input-border: 1px solid var(--color-border);
  --field-input-focus-border: 1px solid var(--color-focus);
  --field-input-focus-outline: 2px solid var(--color-focus-outline);
  --field-input-invalid-border: 1px solid var(--color-negative-outline);
  --field-input-invalid-outline: 0;
  --field-input-invalid-focus-border: 1px solid var(--color-negative);
  --field-input-invalid-focus-outline: 2px solid var(--color-negative-outline);
  --field-input-background: var(--color-white);
  --field-input-disabled-color: var(--color-gray-500);
  --field-input-disabled-background: var(--color-white);
  --field-input-disabled-border: 1px solid var(--color-gray-300);
}

